@@ -1,5 +1,8 @@
 v3.5.0:
+ Users:
   - Prevent viewers from locking the screen focus.
+ Developers:
+  - Some refactor in protocol_ts_estimate_ctf.py required for the new CTF code design prots approach
 v3.4.2:
   - TS movies not hiding any acquisition parameter to prevent accidental override.
 v3.4.1:
